# CRM

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  practice.sql  Диаграмма.drawio
.github/: dependabot.yml
.github/workflows/: linux-build.yml  macos-build.yml  windows-build.yml
CRM/: CMakeLists.txt  UI.pro  boss.cpp  boss.h  boss.ui  db_methods.cpp  db_methods.h  db_pool.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manager.cpp  manager.h  manager.ui  marketer.cpp  marketer.h  marketologist.cpp  marketologist.h  marketologist.ui  seller.cpp  seller.h  seller.ui
CRM/Login/: Login.ui
CRM/database-types/: advertisement.h  client.h  comment.h  deal.h  employee.h  laptop.h  leader.h  marketer.h  provider.h  seller.h  stock.h  stock_manager.h  views.h
CRM/db_settings/: db_settings.cpp  db_settings.h  db_settings.ui
CRM/editUI/: EditClient.ui  editAd.ui  editAds.ui  editClient.ui  editDeal.ui  editEmployee.ui  editLaptop.ui  editProvider.ui  editStock.ui  editVendor.ui
CRM/interface/: interface.ui  interfaceWidget.cpp  interfaceWidget.h
CRM/leader/: leader.cpp  leader.h  leader.ui  leaderWidget.cpp  leaderWidget.h
CRM/login/: login.cpp  login.h  login.ui
CRM/manager/: manager.cpp  manager.h  manager.ui  managerWidget.cpp  managerWidget.h
CRM/marketer/: marketer.cpp  marketer.h  marketer.ui  marketerWidget.cpp  marketerWidget.h
CRM/seller/: seller.cpp  seller.h  seller.ui  sellerWidget.cpp  sellerWidget.h
Images/: info
config/: config.xml
resources/: main.icns  resources.qrc  resources.rc
resources/translation/: crm_en.ts  crm_ru.ts
